# nativerpc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.json  pyproject.toml  tsconfig.json
src/nativerpc/: __init__.py  __main__.py  cli.cpp  cli.js  cli.py  common.cpp  common.h  common.js  common.py  common.ts  extension.cpp  extension.h  extension.js  extension.py  extension.ts  index.ts  main.cmake.in  main.cpp  main.h  main.py  main.ts  manager.js  parser.py
