[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nativerpc"
version = "1.0.0"
authors = [
  { name="Aare Pikaro", email="aare.pikaro@gmail.com" },
]
description = "Native RPC library for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/nativerpc"
Issues = "https://github.com/nativerpc"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nativerpc = "nativerpc.cli:main"